# Night-Voyage

./: .gitignore  .npmrc  AGENTS.md  V9.4 [preview] 狐神抚 · 毓忻.json  build-debug.bat  build-release.bat  cargo-build-log.txt  diff.txt  fix.py  fix2.py  fix_animations_and_sizes.py  fix_character.py  fix_colors.py  fix_imports.py  fix_new_chat.py  fix_onchange.py  fix_parenthesis.py  fix_parenthesis_2.py  fix_remaining_cards.py  fix_settings.py  fix_settings3.py  fix_stuck_rounds.sql  fix_syntax_final.py  fix_ui.py  fix_wb.py  fix_worldbook_app.py  index-mobile.html  index.html  llm.txt  night-voyage.keystore  package-lock.json  package.json  read_diff.py  refactor.py  refactor_charactersidebar.py  refactor_completionsidebar.py  refactor_detail.py  refactor_icons.py  refactor_newchat.py  refactor_params.py  (+13 more)
docs/: README.md  (+2 more)
src-tauri/: Cargo.toml  build.rs  find-command-builds.py  fix-all-vendor-builds.py  fix-vendor-builds.py  tauri.conf.json  update-checksums.py
src-tauri/migrations/: 0001_init.sql  0002_add_reply_to_id.sql  0003_feature_foundation.sql  0004_add_world_book_image_path.sql  0005_preset_system_phase1.sql  0006_preset_examples_phase2.sql  0007_preset_provider_overrides_phase3.sql  0008_preset_penalties_phase4.sql  0009_preset_response_mode_phase5.sql  0010_character_card_base_sections.sql  0011_character_state_overlays.sql  0012_preset_block_governance.sql  0013_plot_summaries.sql  0014_preset_semantic_groups_phase11.sql  0015_preset_semantic_materialization_phase12.sql  0016_preset_semantic_option_materials_phase12.sql  0017_seed_kedai_builtin_preset_v1.sql  (+14 more)
(+125 files in other folders)
