[package]
name = "night-voyage"
version = "0.1.0"
description = "Night Voyage Desktop App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "night_voyage_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["time", "net", "rt", "sync", "io-util", "macros"] }
minijinja = "2"
regex = "1"
axum = "0.8"
windows = { version = "0.61", features = ["Win32_System_ProcessStatus", "Win32_System_Threading"] }

[profile.dev]
opt-level = 1
debug = 1
split-debuginfo = "packed"
codegen-units = 16

[profile.release]
opt-level = 2
codegen-units = 16
lto = "thin"
strip = true
